<resources>
    <string name="app_name">FeelsGood</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="password2">Password</string>
    <string name="user_name1">Username:</string>
    <string name="id_number">ID:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email_adress">Email Address:</string>
    <string name="credit_number">Credit Number:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="have_you_account_login_her">Have an account? Login!</string>
    <string name="NotTitle">You have a new message!</string>
    <string name="NotContent">hello you have new ride, please take it!</string>
    <string name="registerbutton">Don\'t have you account? Register now!</string>
    <string name="empty">Please Fill all the Fields!!</string>
    <string name="store">Data Stored Successfuly!</string>
    <string name="fetch">Data Displayed Successfuly!</string>
    <string name="type_fo_filtering">type fo filtering</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email_to_passenger">send Email to passenger</string>
    <string name="source">Source:</string>
    <string name="call_to_passenger">call to passenger</string>
    <string name="send_message_to_passenger">send message to passenger</string>
    <string name="take_the_ride">take the ride</string>
    <string name="finish_the_ride">finish the ride</string>
    <string name="distance">distance:</string>
    <string name="destination">destination:</string>
    <string name="Taxi_on_the_way">Hello! the taxi is on the way!!!</string>
    <string name="firebase_error">failure to load firebase</string>
    <string name="insert">insert id</string>
    <string name="error">Error</string>
    <string name="account">have you account? login her!</string>
    <string name="fill_email">please fill the email field!</string>
    <string name="contains">the email is not make sense</string>
    <string name="fill_id">please fill the id number field!</string>
    <string name="fill_password">please fill the password field!</string>
    <string name="fill_userName">please fill the user name field!</string>
    <string name="fill_creditCard">please fill the credit card field!</string>
    <string name="fill_phone">please fill the phone field!</string>
    <string name="new_reqest">new request for drive</string>
    <string name="relevent_ride">you have a new relevant ride to take</string>
    <string name="email">Email</string>
    <string name="dont_have_you_account_register_her">Dont have you account? register her!</string>
    <string name="Extract_id">this id not exists</string>
    <string name="length_id">the id length must be 9</string>
    <string name="length_phone">the phone number is not make sense</string>
    <string name="length_password">the password must be longer then five letters</string>
    <string name="remember_me">remember me!</string>
    <string name="filter">distance from the raid Filter(KM)</string>
    <string name="shekel">SHEKEL</string>
    <string name="KM">KM</string>
    <string name="update">update ride</string>
    <string name="payment">payment:</string>
    <string name="end_drive">end Drive:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="goodbye">goodbye!!!</string>
    <string name="welcome_to_driver_gettaxi">Welcome to Driver getTaxi!</string>
    <string name="signout">signOut</string>
    <string name="finish_rides">finish rides</string>
    <string name="progress_rides">progress rides</string>
    <string name="available_rides">available rides</string>
    <string name="home">Home</string>
    <string name="app_driver">App Driver</string>
    <string name="pass_finish">the ride pass to finish rides</string>
    <string name="pass_progress">the ride pass to progress rides</string>
    <string name="first_name">first name:</string>
    <string name="last_name">last name:</string>
    <string name="birthday">date of birth:</string>
    <string name="psychoId_number">psychologist id:</string>
    <string name="todo">TODO</string>
    <string name="messageCalm">Let\'s take 15 seconds to lower the stress level by 1</string>
    <string-array name="Treatments">
        <item>BEGINNER</item>
        <item>ADVANCED</item>
        <item>FINISHED</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="TextM3">Relaxation Exercise:</string>
    <string name="Text2M3">Please activate the relaxation exercise:</string>
    <string name="how_stressed_are_you">How stressed are you?</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="_0">0</string>
</resources>
