<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".controller.SignUpActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputfirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_person_white"
            android:drawableStart="@drawable/ic_person_white"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputlastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp">

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_person_white"
            android:drawableStart="@drawable/ic_person_white"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/pickBirthday"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="103dp"
        android:src="@drawable/ic_birthday_white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputIdNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="161dp">

        <EditText
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_id_white"
            android:drawableStart="@drawable/ic_id_white"
            android:ems="10"
            android:hint="@string/id_number"
            android:inputType="number"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputpsychoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp">

        <EditText
            android:id="@+id/psychoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_id_white"
            android:drawableStart="@drawable/ic_id_white"
            android:ems="10"
            android:hint="@string/psychoId_number"
            android:inputType="number"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="217dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_email_white"
            android:drawableStart="@drawable/ic_email_white"
            android:ems="10"
            android:hint="@string/email_adress"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/InputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="169dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_password_key_white"
            android:drawableStart="@drawable/ic_password_key_white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/TypeTreatment"
        android:layout_width="273dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/have_you_account_login_her"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/Register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="26dp"
        app:cardElevation="16dp"
        tools:targetApi="m">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="318dp"
        android:layout_height="43dp"
        android:lines="1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:textSize="24sp" />
</RelativeLayout>